src/pages/Homepage.css
@media (max-width: 768px) and (orientation: portrait) {
  .wrapper {
    background: url("./img/responsiveBg.svg") no-repeat;
    background-size: cover;
    width: 100%;
  }
  .hero--wrapper {
    align-items: flex-start;
    color: #e3e3e3;
    font-size: 16px;
    text-align: center;
  }
}
@media (min-width: 768px) and (orientation: landscape) {
  .wrapper {
    background: url("./img/mdBg.svg") no-repeat;
    background-size: cover;
    height: 100vh;
    padding: 0;
    margin: 0;
    font-size: 1em;
    color: #232323;
  }
}

@media (min-width: 1280px) {
  .wrapper {
    background: url("./img/bg.svg") no-repeat;
    background-size: cover;
    height: 100vh;
    padding: 0;
    margin: 0;
    font-size: 1em;
    color: #232323;
  }
  .hero--wrapper {
    color: #232323;
    font-size: 1em;
    text-align: left;
  }
}

